--- a/backend/package.json
+++ b/backend/package.json
@@ -8,12 +8,16 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.4",
+    "body-parser": "^1.18.3",
+    "connect": "^3.6.6",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "pg-promise": "^8.6.4",
+    "qs": "^6.7.0",
     "uuid": "^3.3.2"
   }
 }
