--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.18.3",
     "connect": "^3.6.6",
     "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "jsonwebtoken": "^8.5.1",
