--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "vue": "^2.6.6",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
+    "vue-scrollto": "^2.15.0",
     "vue-search-select": "^2.8.3"
   },
   "devDependencies": {
