--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "vue": "^2.6.6",
+    "vue-backtotop": "^1.6.1",
     "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-scrollto": "^2.15.0",
